--- a/notes/todo
+++ b/notes/todo
@@ -1,33 +1,33 @@
 FCubed=FFF=Fluid Fracturing Flow 
 
 
-- create outputfolder name
+X- create outputfolder name
 - nonlinear residual
-- source term
-- fluid velocity recover
+X- source term
 - mu=tau_e/(plith-Pf_darcy)  in vtu
 - forumlation Darcy syimpson vs rest monde
 - cfl de Darcy? 
 - put back time in darcy
-- compute velocity darcy!
+X- compute velocity darcy!
 - jit?
 - export solution Q1 vtu
 - make pvd files
-- change py files pdf
-- export source terms in vtk/png
-- log file 
+X- change py files pdf
+X- export source terms in vtk/png
+X- log file 
 - create sed script 
 - formats ecriture
 - measure vtheta rotation clast?
 - separate sr vis et sr plast - see stone 121
-- ar figs swarm
+X- ar figs swarm
 - regarder ee =0 nan ds material model
 
-create history.txt
-- istep time + columns
+
+create hist.txt. (write_history)
+#- istep time + columns
 - measure % markers in clast with ee > 2 background sr
 - measure % markers in clast with plastic strain eff > 1 
-- 
+
 
 
 benchmarks:
