--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -281,7 +281,22 @@ projection/averaging , advection, periodic pc, painting
 
 \subsection{Simple shear}
 
+%-----------------
 \subsection{SolVi}
+
+\begin{center}
+\includegraphics[width=8cm]{./results/benchmark_solvi/vel}
+\includegraphics[width=8cm]{./results/benchmark_solvi/vel_analytical}\\
+\includegraphics[width=8cm]{./results/benchmark_solvi/press}
+\includegraphics[width=8cm]{./results/benchmark_solvi/press_analytical}
+\end{center}
+
+\begin{center}
+\includegraphics[width=8cm]{./results/benchmark_solvi/convergence.pdf}
+\includegraphics[width=8cm]{./results/benchmark_solvi/vrms.pdf}
+\end{center}
+
+
 
 \subsection{Poiseuille nonlinear}
 
