--- a/notes/biblio.bib
+++ b/notes/biblio.bib
@@ -35,3 +35,50 @@ Title = {Practical Finite Element Modelin in Earth Science Using Matlab},
 isbn={978-1-119-24862-0},
 Year = {2017}}
 
+@article{krhb12,
+title={High accuracy mantle convection simulation through modern numerical methods},
+author={M. Kronbichler and T. Heister and W. Bangerth},
+journal=gji,
+volume={191},
+pages={12-29},
+doi={10.1111/j.1365-246X.2012.05609.x},
+year={2012}}
+
+@article{gemd13,
+title={{An adaptive staggered grid finite difference method for modeling geodynamic
+Stokes flows with strongly variable viscosity}},
+author={T.V. Gerya and D.A. May and T. Duretz},
+journal=g3,
+volume={14},
+number={4},
+doi={10.1002/ggge.20078},
+year={2013}}
+
+@article{scpo03,
+title={{Analytical solutions for deformable elliptical inclusions in general shear}},
+author={D.W. Schmid and Y.Y. Podlachikov},
+journal= gji,
+volume={155},
+doi={10.1046/j.1365-246X.2003.02042.x},
+pages={269-288},
+year={2003}}
+
+@article{thba22,
+author={C. Thieulot and W. Bangerth},
+title={On the choice of finite element for applications in geodynamics},
+journal={Solid Earth},
+doi={10.5194/se-13-1-2022},
+volume={13},
+year={2022}}
+
+
+article{wanu84,
+title={Porosity reduction and crustal pore pressure development},
+author={Walder, Joseph and Nur, Amos},
+journal={Journal of Geophysical Research: Solid Earth},
+volume={89},
+number={B13},
+pages={11539--11548},
+doi={10.1029/JB089iB13p11539},
+year={1984}}
+
